--- a/src/static/breakpoints.scss
+++ b/src/static/breakpoints.scss
@@ -1,7 +1,4 @@
 @media only screen and (max-width: 1920px) {
-  .product-card {
-    margin: 10px 0 0 33px;
-  }
 
   .col-xl-3 {
     padding: 0;
@@ -36,7 +33,6 @@
   }
 
   .product-card {
-    margin: 10px 0 0 33px;
     width: 21vw;
   }
 
